# DISCOSClient

./: .coveragerc  .gitignore  .landscape.yml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ci_tests.yml
DISCOSClient/: .definitions.py.swp  __init__.py  definitions.py
discos_client/: __init__.py  cli.py  client.py  initializer.py  merger.py  namespace.py  scripts.py  utils.py
discos_client/schemas/: antenna.json  mount.json
discos_client/schemas/common/: active_surface.json  antenna.json  backends.json  command_answer.json  derotators.json  receivers.json  scheduler.json  weather.json
discos_client/schemas/definitions/: LAN.json  USD.json  active_surface.json  status.json  timestamp.json
discos_client/schemas/medicina/: active_surface.json
discos_client/schemas/noto/: active_surface.json
discos_client/schemas/srt/: active_surface.json  minor_servo.json  mount.json
discos_client/servers/medicina/: server.key
discos_client/servers/srt/: server.key
docs/: conf.py  index.rst  install.rst  patches.py  user.rst
docs/_static/: custom.css
docs/api/: api.rst
docs/developer/: clients.rst  contributing.rst  developer.rst  inner_classes.rst  testing.rst
docs/schemas/: active_surface.json  active_surface.rst  antenna.rst  backends.rst  common.rst  definitions.rst  derotators.rst  example.json  minor_servo.rst  mount.rst  receivers.rst  scheduler.rst  schemas.rst  srt.rst  weather.rst
docs/user/: client.rst  commands.rst  telemetry.rst  user.rst
examples/: async_client.py  autoUpdateClient.py  blockingClient.py  gui_client.py  sync_client.py
scripts/: discos-keygen
tests/: test_client.py  test_namespace.py  test_schemas.py  test_scripts.py
tests/messages/: antenna.json  minor_servo.GFR.json  minor_servo.SRP.json  minor_servo.boss.json  mount.json  receivers.boss.json  receivers.rx.json  weather.json
tests/messages/common/: antenna.json  backends.json  derotators.json  receivers.json  receivers.rx.json  scheduler.json
tests/messages/srt/: active_surface.json  minor_servo.json  mount.json
tests/test_keys/: dummy.key  dummy.key_secret
