[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discos-client"
version = "0.1.0"
description = "Python client for DISCOS"
authors = [{ name = "Giuseppe Carboni", email = "giuseppe.carboni@inaf.it" }]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["discos_client"]

[tool.setuptools.package-data]
"discos_client" = ["schemas/*.json"]
