[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discos-client"
version = "0.2.0"
description = "Python client for DISCOS"
authors = [{ name = "Giuseppe Carboni", email = "giuseppe.carboni@inaf.it" }]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.9"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyzmq",
    "platformdirs"
]

[tool.setuptools]
packages = ["discos_client"]

[project.scripts]
discos-keygen = "discos_client.cli:main"

[tool.setuptools.package-data]
discos_client = ["schemas/**", "servers/**"]

[project.optional-dependencies]
test = ["coverage", "prospector", "jsonschema", "referencing"]
docs = ["sphinx<9,>=6", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx-jsonschema"]
